fix: align vote status to right

--- a/src/styles/PokerRoom.module.scss
+++ b/src/styles/PokerRoom.module.scss
@@ -215,6 +215,13 @@
     align-items: center;
     margin-top: 20px;
   }
+
+  .voteStatusContainer {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  
   
   
   
